feat: (wiki) - Added global variables documentation - Added modules documentation

--- a/views/basics/global-variables.ejs
+++ b/views/basics/global-variables.ejs
@@ -8,14 +8,8 @@
   <div class="container">
     <h1 class="bg-dark text-white text-center my-4 py-4"><%= translates.title %></h1>
     <div class="alert alert-secondary">
-      <h2><%- translates.infoBoxTitle %></h2>
-      <p><%- translates.infoBoxPart1 %></p>
-      <pre class="bg-body-secondary rounded m-5 border border-2 border-secondary">
-        <code>
-<%= include('./includesCode/web-application-template') %>
-        </code>
-      </pre>
-      <%- translates.infoBoxPart2 %>
+      <h2><%= translates.infoBoxTitle %></h2>
+      <p><%- translates.infoBox %></p>
     </div>
 
   </div>
