--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -43,6 +43,20 @@
                 ><%= global.lang.navigation.webApplications %></a
               >
             </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="/<%= global.lang.current %>/basics/global-variables"
+                ><%= global.lang.navigation.globalVariables %></a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="/<%= global.lang.current %>/basics/modules"
+                ><%= global.lang.navigation.modules %></a
+              >
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
