feat: (shop example) - Updated login and signup functionality

--- a/views/shop/admin/products.ejs
+++ b/views/shop/admin/products.ejs
@@ -26,6 +26,7 @@
                           <a href="/<%= global.lang.current %>/examples/store/admin/edit-product/<%= product._id %>?edit=true" class="btn btn-success">Edit</a>
                           <form action="/<%= global.lang.current %>/examples/store/admin/delete-product" method="POST">
                             <input type="hidden" name="productId" value="<%= product._id %>">
+                            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                             <button class="btn btn-success" type="submit">Delete</button>
                           </form>
                           
