--- a/views/shop/includes/navigation.ejs
+++ b/views/shop/includes/navigation.ejs
@@ -17,6 +17,7 @@
           ><%= global.lang.examples.store.navigation.products %></a
         >
       </li>
+      <% if(isAuthenticated) { %>
       <li class="main-header__item">
         <a
           class="<%= path === '/cart' ? 'active' : '' %>"
@@ -45,6 +46,36 @@
           ><%= global.lang.examples.store.navigation.adminProduct %></a
         >
       </li>
+      <% } %>
+    </ul>
+    <ul class="main-header__item-list">
+      <% if(isAuthenticated) { %>
+      <li class="main-header__item">
+        <form
+          action="/<%= global.lang.current %>/examples/store/auth/logout"
+          method="post"
+        >
+          <!-- Is important to a correct functionality with the package csurf the name must be _csrf -->
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+          <button class="btn btn-danger" type="submit">Logout</button>
+        </form>
+      </li>
+      <% } else { %>
+      <li class="main-header__item">
+        <a
+          class="<%= path === '/login' ? 'active' : '' %>"
+          href="/<%= global.lang.current %>/examples/store/auth/login"
+          >Login</a
+        >
+      </li>
+      <li class="main-header__item">
+        <a
+          class="<%= path === '/signup' ? 'active' : '' %>"
+          href="/<%= global.lang.current %>/examples/store/auth/signup"
+          >Signup</a
+        >
+      </li>
+      <% } %>
     </ul>
   </nav>
 </div>
@@ -78,6 +109,22 @@
         ><%= global.lang.examples.store.navigation.orders %></a
       >
     </li>
+    <% if(!isAuthenticated) { %>
+    <li class="mobile-nav__item">
+      <a
+        class="<%= path === '/login' ? 'active' : '' %>"
+        href="/<%= global.lang.current %>/examples/store/auth/login"
+        >Login</a
+      >
+    </li>
+    <li class="mobile-nav__item">
+      <a
+        class="<%= path === '/signup' ? 'active' : '' %>"
+        href="/<%= global.lang.current %>/examples/store/auth/signup"
+        >Signup</a
+      >
+    </li>
+    <% } else { %>
     <li class="mobile-nav__item">
       <a
         class="<%= path === '/admin/add-product' ? 'active' : '' %>"
@@ -92,5 +139,16 @@
         ><%= global.lang.examples.store.navigation.adminProduct %>
       </a>
     </li>
+    <li class="mobile-nav__item">
+      <form
+        action="/<%= global.lang.current %>/examples/store/auth/logout"
+        method="post"
+      >
+        <!-- Is important to a correct functionality with the package csurf the name must be _csrf -->
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+        <button class="btn btn-danger" type="submit">Logout</button>
+      </form>
+    </li>
+    <% } %>
   </ul>
 </nav>
