--- a/views/shop/admin/edit-product.ejs
+++ b/views/shop/admin/edit-product.ejs
@@ -32,6 +32,7 @@
             <% if (editing) { %>
                 <input type="hidden" name="productId" value="<% if (editing) { %><%= product._id %><% } %>">
             <% } %>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <button class="btn btn-success" type="submit">
                 <% if (editing) { %>
                     Update Product
