--- a/views/shop/includes/add-to-cart.ejs
+++ b/views/shop/includes/add-to-cart.ejs
@@ -1,4 +1,5 @@
 <form action="/<%= global.lang.current %>/examples/store/cart" method="post">
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
   <button type="submit" class="btn btn-success">Add to cart</button>
   <input type="hidden" name="productId" value="<%= product._id %>" />
 </form>
