--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -31,7 +31,9 @@
                         </div>
                         <div class="card__actions">
                             <a href="/examples/store/products/<%= product._id %>" class="btn btn-success">Details</a>
-                            <%- include('./includes/add-to-cart.ejs', {product: product}) %>
+                            <% if(isAuthenticated) { %>
+                                <%- include('./includes/add-to-cart.ejs', {product: product}) %>
+                            <% } %>
                         </div>
                     </article>
                 <% } %>
