--- a/views/shop/auth/new-password.ejs
+++ b/views/shop/auth/new-password.ejs
@@ -12,25 +12,20 @@
     <% } %>
     <form
         class="login-form"
-        action="/<%= global.lang.current %>/examples/store/auth/login"
+        action="/<%= global.lang.current %>/examples/store/auth/new-password"
         method="POST"
     >
-        <div class="form-control">
-            <label for="email">E-Mail</label>
-            <input type="text" name="email" id="email">
-        </div>
         <div class="form-control">
             <label for="password">Password</label>
             <input type="password" name="password" id="password">
         </div>
+        <input type="hidden" name="userId" value="<%= userId %>" />
+        <input type="hidden" name="passwordToken" value="<%= passwordToken %>" />
         <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <button class="btn btn-success" type="submit">
-            Login
+            Update Password
         </button>
     </form>
-    <div class="centered">
-        <a href="/<%= global.lang.current %>/examples/store/auth/reset">Reset Password</a>
-    </div>
 </main>
 
   <%- include('../includes/end.ejs') %>
