--- a/views/shop/auth/signup.ejs
+++ b/views/shop/auth/signup.ejs
@@ -14,18 +14,37 @@
         class="login-form"
         action="/<%= global.lang.current %>/examples/store/auth/signup"
         method="POST"
+        novalidate
     >
         <div class="form-control">
             <label for="email">E-Mail</label>
-            <input type="text" name="email" id="email">
+            <input
+                class="<%= validationErrors.find(e => e.path === 'email') ? 'invalid' : '' %>"
+                type="text"
+                name="email"
+                id="email"
+                value="<%= oldInput.email %>"
+            >
         </div>
         <div class="form-control">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input
+                class="<%= validationErrors.find(e => e.path === 'password') ? 'invalid' : '' %>"
+                type="password"
+                name="password"
+                id="password"
+                value="<%= oldInput.password %>"
+            >
         </div>
         <div class="form-control">
             <label for="confirmPassword">Confirm Password</label>
-            <input type="password" name="confirmPassword" id="confirmPassword">
+            <input
+                class="<%= validationErrors.find(e => e.path === 'confirmPassword') ? 'invalid' : '' %>"
+                type="password"
+                name="confirmPassword"
+                id="confirmPassword"
+                value="<%= oldInput.confirmPassword %>"
+            >
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <button class="btn btn-success" type="submit">
