--- a/views/shop/auth/login.ejs
+++ b/views/shop/auth/login.ejs
@@ -17,11 +17,23 @@
     >
         <div class="form-control">
             <label for="email">E-Mail</label>
-            <input type="text" name="email" id="email">
+            <input
+                class="<%= validationErrors.find(e => e.path === 'email') ? 'invalid' : '' %>"
+                type="text"
+                name="email"
+                id="email"
+                value="<%= oldInput.email %>"
+            >
         </div>
         <div class="form-control">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input
+                class="<%= validationErrors.find(e => e.path === 'password') ? 'invalid' : '' %>"
+                type="password"
+                name="password"
+                id="password"
+                value="<%= oldInput.password %>"
+            >
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
         <button class="btn btn-success" type="submit">
