--- a/views/shop/admin/edit-product.ejs
+++ b/views/shop/admin/edit-product.ejs
@@ -8,33 +8,61 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main class="container">
+        <% if(errorMessage.length) { %>
+            <div class="alert alert-danger"><%= errorMessage %></div>
+        <% } %>
         <form
             class="product-form"
-            action="/<%= global.lang.current %>/examples/store/admin/<% if (editing) {%>edit-product<% } else { %>add-product<% } %>"
+            action="/<%= global.lang.current %>/examples/store/admin/<% if (editing || hasError) {%>edit-product<% } else { %>add-product<% } %>"
             method="POST"
         >
             <div class="form-control">
                 <label for="title">Title</label>
-                <input type="text" name="title" id="title" value="<% if (editing) { %><%= product.title %><% } %>">
+                <input
+                    class="<%= validationErrors.find(e => e.path === 'title') ? 'invalid' : '' %>"
+                    type="text"
+                    name="title"
+                    id="title"
+                    value="<% if (editing || hasError) { %><%= product.title %><% } %>"
+                >
             </div>
             <div class="form-control">
                 <label for="imageUrl">image URL</label>
-                <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= product.imageUrl %><% } %>">
+                <input
+                    class="<%= validationErrors.find(e => e.path === 'imageUrl') ? 'invalid' : '' %>"
+                    type="text"
+                    name="imageUrl"
+                    id="imageUrl"
+                    value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>"
+                >
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
-                <input type="number" name="price" id="price" step="0.01" value="<% if (editing) { %><%= product.price %><% } %>">
+                <input
+                    class="<%= validationErrors.find(e => e.path === 'price') ? 'invalid' : '' %>"
+                    type="number"
+                    name="price"
+                    id="price"
+                    step="0.01" value="<% if (editing || hasError) { %><%= product.price %><% } %>"
+                >
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
+                <textarea
+                    class="<%= validationErrors.find(e => e.path === 'description') ? 'invalid' : '' %>"
+                    name="description"
+                    id="description"
+                    rows="5"
+                >
+                    <% if (editing || hasError) { %><%= product.description %><% } %>
+                </textarea>
             </div>
-            <% if (editing) { %>
-                <input type="hidden" name="productId" value="<% if (editing) { %><%= product._id %><% } %>">
+            <% if (editing || hasError) { %>
+                <input type="hidden" name="productId" value="<% if (editing || hasError) { %><%= product._id %><% } %>">
             <% } %>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <button class="btn btn-success" type="submit">
-                <% if (editing) { %>
+                <% if (editing || hasError) { %>
                     Update Product
                 <% } else { %>
                     Add Product
