feat: (shop example) - update images from form functionality

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -154,6 +154,7 @@
   method="POST"
   id="langFrom"
 >
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
   <input id="inputLanguage" type="hidden" name="language" value="" />
   <input id="inputPath" type="hidden" name="path" value="" />
 </form>
