--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -4,7 +4,6 @@
 
 <body>
     <%- include('../includes/navigation.ejs') %>
-    <%- include('./includes/navigation.ejs') %>
 
     <main class="container">
         <h1 class="bg-dark text-white text-center my-4 py-4"><%= translates.title %></h1>
@@ -12,8 +11,9 @@
             <%- translates.warning %>
           </p>
         <div class="alert alert-secondary">
-          <p><%= translates.infoBox %></p>
+          <p><%- translates.infoBox %></p>
         </div>
+        <%- include('./includes/navigation.ejs') %>
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
