--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,12 +23,9 @@ form {
   text-align: center;
 }
 
-.image {
-  height: 20rem;
-}
-
 .image img {
-  height: 100%;
+  max-width: 100%;
+  max-height: 20rem;
 }
 
 .main-header {
