--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -33,10 +33,10 @@
         <div class="centered">
             <h1><%= product.title %></h1>
             <hr>
-            <div>
+            <div class="image">
               <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
             </div>
-            <h2><%= product.price %></h2>
+            <h2>$<%= product.price %></h2>
             <p><%= product.description %></p>
             <% if(isAuthenticated) { %>
                 <%- include('./includes/add-to-cart.ejs') %>
