--- a/views/shop/admin/products.ejs
+++ b/views/shop/admin/products.ejs
@@ -7,6 +7,29 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main class="container">
+        <%- include('../includes/documentation/infobox.ejs', {
+            model: {
+                path: 'models/product.js',
+                imports: 'Mongoose',
+                method: null,
+                steps: translates.model,
+                code: include('../includes/documentation/codes/models/product.ejs')
+            },
+            controller: {
+                path: 'controllers/admin.js',
+                imports: 'Product model',
+                method: 'getProduct()',
+                steps: translates.controller,
+                code: include('../includes/documentation/codes/controllers/admin-getProducts.ejs')
+            },
+            view: {
+                path: 'views/shop/admin/products.ejs',
+                imports: null,
+                method: null,
+                steps: translates.view,
+                code: include('../includes/documentation/codes/views/admin/products.ejs')
+            }
+        }) %>
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
