--- a/views/shop/includes/documentation/codes/views/admin/products.ejs
+++ b/views/shop/includes/documentation/codes/views/admin/products.ejs
@@ -1,3 +1,5 @@
+    <!-- To add compatibility all % simbols are be changed to # -->
+  
     <# if (prods.length > 0) { #>
         <div class="grid">
             <# for (let product of prods) { #>
