--- a/views/shop/includes/documentation/codes/views/product-detail.ejs
+++ b/views/shop/includes/documentation/codes/views/product-detail.ejs
@@ -1,3 +1,5 @@
+    <!-- To add compatibility all % simbols are be changed to # -->
+
     <!-- product-detail.ejs -->
     <div class="centered">
         <h1><#= product.title #></h1>
