--- a/views/shop/includes/documentation/codes/views/product-list.ejs
+++ b/views/shop/includes/documentation/codes/views/product-list.ejs
@@ -1,3 +1,5 @@
+    <!-- To add compatibility all % simbols are be changed to # -->
+  
     <!-- product-list.ejs -->
 
     <# if (prods.length > 0) { #>
