--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -6,6 +6,36 @@
   <%- include('../includes/navigation.ejs') %>
   <%- include('./includes/navigation.ejs') %>
   <main class="container">
+    <%- include('./includes/documentation/infobox.ejs', {
+      app: {
+          path: null,
+          imports: null,
+          method: null,
+          steps: null,
+          code: null
+      },
+      model: {
+          path: 'models/order.js',
+          imports: 'Mongoose',
+          method: null,
+          steps: translates.model,
+          code: include('./includes/documentation/codes/models/order.ejs')
+      },
+      controller: {
+          path: 'controllers/shop.js',
+          imports: 'Order model',
+          method: 'getOrders()',
+          steps: translates.controller,
+          code: include('./includes/documentation/codes/controllers/shop-getOrders.ejs')
+      },
+      view: {
+          path: 'views/shop/orders.ejs',
+          imports: null,
+          method: null,
+          steps: translates.view,
+          code: include('./includes/documentation/codes/views/orders.ejs')
+      }
+    }) %>
     <% if (orders.length <= 0) { %>
       <h1>Nothing There!</h1>
     <% } else { %>
