feat: (shop example) - Added routes to infobox

--- a/views/shop/admin/products.ejs
+++ b/views/shop/admin/products.ejs
@@ -15,6 +15,13 @@
                 steps: translates.app,
                 code: include('../includes/documentation/codes/app-session-csrftoken.ejs')
             },
+            routes: {
+                path: null,
+                imports: null,
+                method: null,
+                steps: null,
+                code: null
+            },
             model: {
                 path: 'models/product.js',
                 imports: 'Mongoose',
