--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -14,6 +14,13 @@
           steps: null,
           code: null
       },
+      routes: {
+        path: null,
+        imports: null,
+        method: null,
+        steps: null,
+        code: null
+    },
       model: {
           path: 'models/order.js',
           imports: 'Mongoose',
