--- a/views/shop/auth/signup.ejs
+++ b/views/shop/auth/signup.ejs
@@ -15,6 +15,13 @@
             steps: translates.app,
             code: include('../includes/documentation/codes/app-flash-session-csrftoken.ejs')
         },
+        routes: {
+            path: null,
+            imports: null,
+            method: null,
+            steps: null,
+            code: null
+        },
         model: {
             path: null,
             imports: null,
