feat: (shop example) - Removed first and second step from routes documentation login - Added express in importations documentation login

--- a/views/shop/auth/login.ejs
+++ b/views/shop/auth/login.ejs
@@ -17,7 +17,7 @@
         },
         routes: {
             path: 'routes/store/auth.js',
-            imports: 'Express-validator',
+            imports: 'express, express-validator',
             method: 'get(), post()',
             steps: translates.routes,
             code: include('../includes/documentation/codes/routes/auth.ejs')
