--- a/views/shop/auth/signup.ejs
+++ b/views/shop/auth/signup.ejs
@@ -10,17 +10,17 @@
     <%- include('../includes/documentation/infobox.ejs', {
         app: {
             path: 'app.js',
-            imports: 'Express-validator (Realmente en el archivo de rutas), connect-flash, Mongoose, express-session, connect-mongodb-session, csurf',
+            imports: 'dotenv, connect-flash, Mongoose, express-session, connect-mongodb-session, csurf',
             method: null,
             steps: translates.app,
-            code: include('../includes/documentation/codes/app-flash-session-csrftoken.ejs')
+            code: include('../includes/documentation/codes/app-dotenv-flash-session-csrftoken.ejs')
         },
         routes: {
-            path: null,
-            imports: null,
-            method: null,
-            steps: null,
-            code: null
+            path: 'routes\store\auth.js',
+            imports: 'express, express-validator, authController, User model',
+            method: 'get(), post()',
+            steps: translates.routes,
+            code: include('../includes/documentation/codes/routes/auth-signup.ejs')
         },
         model: {
             path: null,
@@ -31,8 +31,8 @@
         },
         controller: {
             path: 'controllers/auth.js',
-            imports: null,
-            method: 'getSignup()',
+            imports: 'bcryptjs, nodemailer, nodemailer-sendgrid-transport, express-validator',
+            method: 'getSignup(), postSignup()',
             steps: translates.controller,
             code: include('../includes/documentation/codes/controllers/auth-signup.ejs')
         },
